# geekbench-browser-python

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  labels.yml
docs/: conf.py  index.md  installation.md  usage.md
src/geekbench_browser/: __main__.py  _main.py  _option_eat_all.py  _rich_table.py
tests/: test_main.py
