[tool.poetry]
name = "geekbench-browser-python"
version = "0.1.5"
description = "Simple package for getting data from browser.geekbench.com"
authors = ["34j <34j.95a2p@simplelogin.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/34j/geekbench-browser-python"
documentation = "https://geekbench-browser-python.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "geekbench_browser", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/34j/geekbench-browser-python/issues"
"Changelog" = "https://github.com/34j/geekbench-browser-python/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
gbr = 'geekbench_browser.__main__:cli'
geekbench-browser = 'geekbench_browser.__main__:cli'

[tool.poetry.dependencies]
python = "^3.8"
requests-cache = "*"
click = "*"
pandas = ">=1.3"
rich = "^13.3.1"
py-cpuinfo = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=3.0"
black = ">=23.1"
isort = ">=5.12"
autoflake = ">=2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/geekbench_browser/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=geekbench_browser --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.isort]
profile = "black"
known_first_party = ["geekbench_browser", "tests"]

[tool.autoflake]
remove_all_unused_imports = true
remove_unused_variables = true
ignore-init-module-imports = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
